# programming-languages

./: .gitignore
assembly/ch2_2_1/: hello  hello.asm  hello_proper_exit  hello_proper_exit.asm
assembly/ch2_3/: print_rax.asm  print_rax_bin  print_rax_bin.asm  print_rax_error  print_rax_error.asm  print_rax_error2
assembly/ch2_4/: print_call  print_call.asm  trash_random  trash_random.asm
assembly/ch2_5/: endianness  endianness.asm
assembly/ch2_5_4/: question18  question18.asm
assembly/ch2_6/: strlen.asm
assembly/ch2_7/: lib.inc  parse_int  parse_uint  print_char  print_int  print_string  print_uint  read_char  read_word  read_word_length  read_word_too_long  report.xml  shitlib.inc  string_copy  string_copy_too_long  string_equals  string_length  string_not_equals  test.py
assembly/ch4_5/: segfault  segfault.asm
assembly/ch4_9_2/: lib.inc  mmap  mmap.asm
assembly/ch5_4/: 1  colon.inc  dict.asm  error_codes.inc  lib.asm  lib.inc  main.asm  makefile  program  test.sh  words.inc
assembly/seminar_2/: 1  lib.inc  print_string  question_stack  question_stack.asm  string_length  task1  task1.asm  task1_2  task2  task2.asm  task2.py  task3  task3.asm  task4
assembly/seminar_3/: question1.asm  task1.asm
assembly/seminar_4/: sleep
c/ch11_7/: CMakeLists.txt  array_int64.c  array_int64.h  int_util.c  int_util.h  linked_list.c  linked_list.h  list_util.c  list_util.h  list_util_test.c  maybe_int.c  maybe_int.h
c/ch13_10/: README.md
c/ch13_11/: CMakeSettings.json
c/ch8_2/: hello.c  hello2.c  main  main2
c/ch8_2_1/: float_reinterpret.c  main
(+118 files in other folders)
